# GEM

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
gem/: __init__.py  cli.py  config.py
gem/analysis/: __init__.py  metrics.py  visualization.py
gem/data/: __init__.py  fetchers.py  processors.py
gem/strategy/: __init__.py  backtest.py  momentum.py
notebooks/: GEM_Strategy_Tutorial.ipynb
tests/: __init__.py  conftest.py  test_analysis_metrics.py  test_config.py  test_data_fetchers.py  test_strategy_momentum.py
